fix errors on mobile version

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ body{
     line-height: 26px;
     color: #FFFFFF;
     justify-self: flex-start;
-    text-decoration: none;
+    text-decoration: none!important;
 }
 #nav-pages{
     justify-self: flex-end;
@@ -116,7 +116,7 @@ body{
     font-weight: normal;
     margin: 0px 10px;
     color: #FFFFFF;
-    text-decoration: none;
+    text-decoration: none!important;
 }
 #header{
     background-image: url(./assets/img/Rectangle\ 1.png);
@@ -606,7 +606,7 @@ grid-column: 1/1;
     font-size: 18px;
     line-height: 26px;
     /* identical to box height */
-    text-decoration: none;
+    text-decoration: none!important;
     
     color: #333333;
     
